compiler-core/src/erlang/snapshots/gleam_core__erlang__tests__alternative_patterns-2.snap
---
source: compiler-core/src/erlang/tests.rs
expression: "\npub fn test() {\n  case Ok(1) {\n    Ok(duplicate_name) | Error(duplicate_name) -> duplicate_name\n  }\n}"

---
-module(the_app).
-compile(no_auto_import).

-export([test/0]).

-spec test() -> integer().
test() ->
    case {ok, 1} of
        {ok, Duplicate_name} ->
            Duplicate_name;

        {error, Duplicate_name} ->
            Duplicate_name
    end.

