compiler-core/src/erlang/snapshots/gleam_core__erlang__tests__bit_string_discard-2.snap
---
source: compiler-core/src/erlang/tests.rs
expression: "\npub fn bitstring_discard(x) -> Bool {\n case x {\n  <<_discardme:utf8, rest:binary>> -> True\n   _ -> False\n }\n}\n                    "

---
-module(the_app).
-compile(no_auto_import).

-export([bitstring_discard/1]).

-spec bitstring_discard(bitstring()) -> boolean().
bitstring_discard(X) ->
    case X of
        <<_@1/utf8, Rest/binary>> ->
            true;

        _@2 ->
            false
    end.

