compiler-core/src/erlang/snapshots/gleam_core__erlang__tests__bit_strings-3.snap
---
source: compiler-core/src/erlang/tests.rs
expression: "pub fn main() {\n  let a = 1\n  let <<b, 1>> = <<1, a>>\n  b\n}\n"

---
-module(the_app).
-compile(no_auto_import).

-export([main/0]).

-spec main() -> integer().
main() ->
    A = 1,
    <<B, 1>> = <<1, A>>,
    B.

