compiler-core/src/erlang/snapshots/gleam_core__erlang__tests__bit_strings-4.snap
---
source: compiler-core/src/erlang/tests.rs
expression: "pub fn main() {\n  let a = <<\"test\":utf8>>\n  let <<b:utf8_codepoint, \"st\":utf8>> = a\n  b\n}\n"

---
-module(the_app).
-compile(no_auto_import).

-export([main/0]).

-spec main() -> integer().
main() ->
    A = <<"test"/utf8>>,
    <<B/utf8, "st"/utf8>> = A,
    B.

